--- a/jupyter_notebooks/03_Search.ipynb
+++ b/jupyter_notebooks/03_Search.ipynb
@@ -324,6 +324,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Tfidf Turns the movie titles into numbers to compare unique words to the search. The parameter 1, 2 means it will also look at the words in pairs. So it will compare for example, Grumpier, Old, Men, Grumpier Old & Old Men but as 1, 2, 3, 1 2 & 2 3"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "metadata": {},
@@ -334,6 +342,75 @@
     "vectorizer = TfidfVectorizer(ngram_range=(1,2))\n",
     "\n",
     "tfidf = vectorizer.fit_transform(df[\"clean_title\"])"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Compute the similarity between the search we enter and all of the movies in the list using cosign similarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics.pairwise import cosine_similarity\n",
+    "import numpy as numpy\n",
+    "\n",
+    "def clean_title(original_title):\n",
+    "    return re.sub(\"[^a-zA-Z0-9]\", \" \", original_title)\n",
+    "\n",
+    "# def search()\n",
+    "original_title = \"Old Men\"\n",
+    "original_title = clean_title(original_title)\n",
+    "query_vec = vectorizer.transform([original_title])\n",
+    "similarity = cosine_similarity(query_vec, tfidf).flatten()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.        , 0.        , 0.67863667, ..., 0.        , 0.        ,\n",
+       "       0.        ])"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "similarity"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<1x84242 sparse matrix of type '<class 'numpy.float64'>'\n",
+       "\twith 3 stored elements in Compressed Sparse Row format>"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "query_vec"
    ]
   }
  ],
