Search function working to return 5 most relevent results.

--- a/jupyter_notebooks/03_Search.ipynb
+++ b/jupyter_notebooks/03_Search.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "'/workspace/Movie-Recommendation/jupyter_notebooks'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -51,7 +51,7 @@
        "'/workspace/Movie-Recommendation'"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,14 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3041/1798478721.py:2: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_1553/1798478721.py:2: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = (pd.read_csv(\"/workspace/Movie-Recommendation/outputs/datasets/cleaned/MovieList.csv\")\n"
      ]
     },
@@ -311,7 +311,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,26 +354,276 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.metrics.pairwise import cosine_similarity\n",
-    "import numpy as numpy\n",
+    "import numpy as np\n",
+    "import re\n",
     "\n",
     "def clean_title(original_title):\n",
     "    return re.sub(\"[^a-zA-Z0-9]\", \" \", original_title)\n",
     "\n",
-    "# def search()\n",
-    "original_title = \"Old Men\"\n",
-    "original_title = clean_title(original_title)\n",
-    "query_vec = vectorizer.transform([original_title])\n",
-    "similarity = cosine_similarity(query_vec, tfidf).flatten()"
+    "def search(original_title):\n",
+    "    original_title = \"Toy Story\"\n",
+    "    original_title = clean_title(original_title)\n",
+    "    query_vec = vectorizer.transform([original_title])\n",
+    "    similarity = cosine_similarity(query_vec, tfidf).flatten()\n",
+    "    #Finds the 5 most similar results\n",
+    "    indices = np.argpartition(similarity, -5) [-5:]\n",
+    "    #Index the movies by the indices to get the titles. [::-1] To reverse order so most similar appears first\n",
+    "    results = df.iloc[indices][::-1]\n",
+    "    return results"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>adult</th>\n",
+       "      <th>belongs_to_collection</th>\n",
+       "      <th>budget</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>homepage</th>\n",
+       "      <th>id</th>\n",
+       "      <th>imdb_id</th>\n",
+       "      <th>original_language</th>\n",
+       "      <th>original_title</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>...</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>runtime</th>\n",
+       "      <th>spoken_languages</th>\n",
+       "      <th>status</th>\n",
+       "      <th>tagline</th>\n",
+       "      <th>title</th>\n",
+       "      <th>video</th>\n",
+       "      <th>vote_average</th>\n",
+       "      <th>vote_count</th>\n",
+       "      <th>clean_title</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>False</td>\n",
+       "      <td>{'id': 10194, 'name': 'Toy Story Collection', ...</td>\n",
+       "      <td>30000000</td>\n",
+       "      <td>[{'id': 16, 'name': 'Animation'}, {'id': 35, '...</td>\n",
+       "      <td>http://toystory.disney.com/toy-story</td>\n",
+       "      <td>862</td>\n",
+       "      <td>tt0114709</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>Led by Woody, Andy's toys live happily in his ...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3.735540e+08</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>False</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>5415.0</td>\n",
+       "      <td>Toy Story</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15348</th>\n",
+       "      <td>False</td>\n",
+       "      <td>{'id': 10194, 'name': 'Toy Story Collection', ...</td>\n",
+       "      <td>200000000</td>\n",
+       "      <td>[{'id': 16, 'name': 'Animation'}, {'id': 10751...</td>\n",
+       "      <td>http://disney.go.com/toystory/</td>\n",
+       "      <td>10193</td>\n",
+       "      <td>tt0435761</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Toy Story 3</td>\n",
+       "      <td>Woody, Buzz, and the rest of Andy's toys haven...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.066970e+09</td>\n",
+       "      <td>103.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}, {'iso...</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>No toy gets left behind.</td>\n",
+       "      <td>Toy Story 3</td>\n",
+       "      <td>False</td>\n",
+       "      <td>7.6</td>\n",
+       "      <td>4710.0</td>\n",
+       "      <td>Toy Story 3</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2997</th>\n",
+       "      <td>False</td>\n",
+       "      <td>{'id': 10194, 'name': 'Toy Story Collection', ...</td>\n",
+       "      <td>90000000</td>\n",
+       "      <td>[{'id': 16, 'name': 'Animation'}, {'id': 35, '...</td>\n",
+       "      <td>http://toystory.disney.com/toy-story-2</td>\n",
+       "      <td>863</td>\n",
+       "      <td>tt0120363</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Toy Story 2</td>\n",
+       "      <td>Andy heads off to Cowboy Camp, leaving his toy...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>4.973669e+08</td>\n",
+       "      <td>92.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>The toys are back!</td>\n",
+       "      <td>Toy Story 2</td>\n",
+       "      <td>False</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>3914.0</td>\n",
+       "      <td>Toy Story 2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21928</th>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[{'id': 16, 'name': 'Animation'}, {'id': 35, '...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>213121</td>\n",
+       "      <td>tt2446040</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Toy Story of Terror!</td>\n",
+       "      <td>What starts out as a fun road trip for the Toy...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>One toy gets left behind!</td>\n",
+       "      <td>Toy Story of Terror!</td>\n",
+       "      <td>False</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>246.0</td>\n",
+       "      <td>Toy Story of Terror</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25800</th>\n",
+       "      <td>False</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[{'id': 16, 'name': 'Animation'}, {'id': 10751...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>256835</td>\n",
+       "      <td>tt3473654</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Toy Story That Time Forgot</td>\n",
+       "      <td>During a post-Christmas play date, the gang fi...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.000000e+00</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Toy Story That Time Forgot</td>\n",
+       "      <td>False</td>\n",
+       "      <td>6.8</td>\n",
+       "      <td>249.0</td>\n",
+       "      <td>Toy Story That Time Forgot</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       adult                              belongs_to_collection     budget  \\\n",
+       "0      False  {'id': 10194, 'name': 'Toy Story Collection', ...   30000000   \n",
+       "15348  False  {'id': 10194, 'name': 'Toy Story Collection', ...  200000000   \n",
+       "2997   False  {'id': 10194, 'name': 'Toy Story Collection', ...   90000000   \n",
+       "21928  False                                                NaN          0   \n",
+       "25800  False                                                NaN          0   \n",
+       "\n",
+       "                                                  genres  \\\n",
+       "0      [{'id': 16, 'name': 'Animation'}, {'id': 35, '...   \n",
+       "15348  [{'id': 16, 'name': 'Animation'}, {'id': 10751...   \n",
+       "2997   [{'id': 16, 'name': 'Animation'}, {'id': 35, '...   \n",
+       "21928  [{'id': 16, 'name': 'Animation'}, {'id': 35, '...   \n",
+       "25800  [{'id': 16, 'name': 'Animation'}, {'id': 10751...   \n",
+       "\n",
+       "                                     homepage      id    imdb_id  \\\n",
+       "0        http://toystory.disney.com/toy-story     862  tt0114709   \n",
+       "15348          http://disney.go.com/toystory/   10193  tt0435761   \n",
+       "2997   http://toystory.disney.com/toy-story-2     863  tt0120363   \n",
+       "21928                                     NaN  213121  tt2446040   \n",
+       "25800                                     NaN  256835  tt3473654   \n",
+       "\n",
+       "      original_language              original_title  \\\n",
+       "0                    en                   Toy Story   \n",
+       "15348                en                 Toy Story 3   \n",
+       "2997                 en                 Toy Story 2   \n",
+       "21928                en        Toy Story of Terror!   \n",
+       "25800                en  Toy Story That Time Forgot   \n",
+       "\n",
+       "                                                overview  ...       revenue  \\\n",
+       "0      Led by Woody, Andy's toys live happily in his ...  ...  3.735540e+08   \n",
+       "15348  Woody, Buzz, and the rest of Andy's toys haven...  ...  1.066970e+09   \n",
+       "2997   Andy heads off to Cowboy Camp, leaving his toy...  ...  4.973669e+08   \n",
+       "21928  What starts out as a fun road trip for the Toy...  ...  0.000000e+00   \n",
+       "25800  During a post-Christmas play date, the gang fi...  ...  0.000000e+00   \n",
+       "\n",
+       "      runtime                                   spoken_languages    status  \\\n",
+       "0        81.0           [{'iso_639_1': 'en', 'name': 'English'}]  Released   \n",
+       "15348   103.0  [{'iso_639_1': 'en', 'name': 'English'}, {'iso...  Released   \n",
+       "2997     92.0           [{'iso_639_1': 'en', 'name': 'English'}]  Released   \n",
+       "21928    22.0           [{'iso_639_1': 'en', 'name': 'English'}]  Released   \n",
+       "25800    22.0           [{'iso_639_1': 'en', 'name': 'English'}]  Released   \n",
+       "\n",
+       "                         tagline                       title  video  \\\n",
+       "0                            NaN                   Toy Story  False   \n",
+       "15348   No toy gets left behind.                 Toy Story 3  False   \n",
+       "2997          The toys are back!                 Toy Story 2  False   \n",
+       "21928  One toy gets left behind!        Toy Story of Terror!  False   \n",
+       "25800                        NaN  Toy Story That Time Forgot  False   \n",
+       "\n",
+       "      vote_average vote_count                 clean_title  \n",
+       "0              7.7     5415.0                   Toy Story  \n",
+       "15348          7.6     4710.0                 Toy Story 3  \n",
+       "2997           7.3     3914.0                 Toy Story 2  \n",
+       "21928          7.3      246.0        Toy Story of Terror   \n",
+       "25800          6.8      249.0  Toy Story That Time Forgot  \n",
+       "\n",
+       "[5 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +644,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
