--- a/jupyter_notebooks/03_Search.ipynb
+++ b/jupyter_notebooks/03_Search.ipynb
@@ -70,7 +70,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_1553/1798478721.py:2: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_3428/1798478721.py:2: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = (pd.read_csv(\"/workspace/Movie-Recommendation/outputs/datasets/cleaned/MovieList.csv\")\n"
      ]
     },
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,242 +379,106 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>adult</th>\n",
-       "      <th>belongs_to_collection</th>\n",
-       "      <th>budget</th>\n",
-       "      <th>genres</th>\n",
-       "      <th>homepage</th>\n",
-       "      <th>id</th>\n",
-       "      <th>imdb_id</th>\n",
-       "      <th>original_language</th>\n",
-       "      <th>original_title</th>\n",
-       "      <th>overview</th>\n",
-       "      <th>...</th>\n",
-       "      <th>revenue</th>\n",
-       "      <th>runtime</th>\n",
-       "      <th>spoken_languages</th>\n",
-       "      <th>status</th>\n",
-       "      <th>tagline</th>\n",
-       "      <th>title</th>\n",
-       "      <th>video</th>\n",
-       "      <th>vote_average</th>\n",
-       "      <th>vote_count</th>\n",
-       "      <th>clean_title</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>False</td>\n",
-       "      <td>{'id': 10194, 'name': 'Toy Story Collection', ...</td>\n",
-       "      <td>30000000</td>\n",
-       "      <td>[{'id': 16, 'name': 'Animation'}, {'id': 35, '...</td>\n",
-       "      <td>http://toystory.disney.com/toy-story</td>\n",
-       "      <td>862</td>\n",
-       "      <td>tt0114709</td>\n",
-       "      <td>en</td>\n",
-       "      <td>Toy Story</td>\n",
-       "      <td>Led by Woody, Andy's toys live happily in his ...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>3.735540e+08</td>\n",
-       "      <td>81.0</td>\n",
-       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
-       "      <td>Released</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Toy Story</td>\n",
-       "      <td>False</td>\n",
-       "      <td>7.7</td>\n",
-       "      <td>5415.0</td>\n",
-       "      <td>Toy Story</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>15348</th>\n",
-       "      <td>False</td>\n",
-       "      <td>{'id': 10194, 'name': 'Toy Story Collection', ...</td>\n",
-       "      <td>200000000</td>\n",
-       "      <td>[{'id': 16, 'name': 'Animation'}, {'id': 10751...</td>\n",
-       "      <td>http://disney.go.com/toystory/</td>\n",
-       "      <td>10193</td>\n",
-       "      <td>tt0435761</td>\n",
-       "      <td>en</td>\n",
-       "      <td>Toy Story 3</td>\n",
-       "      <td>Woody, Buzz, and the rest of Andy's toys haven...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.066970e+09</td>\n",
-       "      <td>103.0</td>\n",
-       "      <td>[{'iso_639_1': 'en', 'name': 'English'}, {'iso...</td>\n",
-       "      <td>Released</td>\n",
-       "      <td>No toy gets left behind.</td>\n",
-       "      <td>Toy Story 3</td>\n",
-       "      <td>False</td>\n",
-       "      <td>7.6</td>\n",
-       "      <td>4710.0</td>\n",
-       "      <td>Toy Story 3</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2997</th>\n",
-       "      <td>False</td>\n",
-       "      <td>{'id': 10194, 'name': 'Toy Story Collection', ...</td>\n",
-       "      <td>90000000</td>\n",
-       "      <td>[{'id': 16, 'name': 'Animation'}, {'id': 35, '...</td>\n",
-       "      <td>http://toystory.disney.com/toy-story-2</td>\n",
-       "      <td>863</td>\n",
-       "      <td>tt0120363</td>\n",
-       "      <td>en</td>\n",
-       "      <td>Toy Story 2</td>\n",
-       "      <td>Andy heads off to Cowboy Camp, leaving his toy...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>4.973669e+08</td>\n",
-       "      <td>92.0</td>\n",
-       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
-       "      <td>Released</td>\n",
-       "      <td>The toys are back!</td>\n",
-       "      <td>Toy Story 2</td>\n",
-       "      <td>False</td>\n",
-       "      <td>7.3</td>\n",
-       "      <td>3914.0</td>\n",
-       "      <td>Toy Story 2</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>21928</th>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[{'id': 16, 'name': 'Animation'}, {'id': 35, '...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>213121</td>\n",
-       "      <td>tt2446040</td>\n",
-       "      <td>en</td>\n",
-       "      <td>Toy Story of Terror!</td>\n",
-       "      <td>What starts out as a fun road trip for the Toy...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
-       "      <td>Released</td>\n",
-       "      <td>One toy gets left behind!</td>\n",
-       "      <td>Toy Story of Terror!</td>\n",
-       "      <td>False</td>\n",
-       "      <td>7.3</td>\n",
-       "      <td>246.0</td>\n",
-       "      <td>Toy Story of Terror</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25800</th>\n",
-       "      <td>False</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>0</td>\n",
-       "      <td>[{'id': 16, 'name': 'Animation'}, {'id': 10751...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>256835</td>\n",
-       "      <td>tt3473654</td>\n",
-       "      <td>en</td>\n",
-       "      <td>Toy Story That Time Forgot</td>\n",
-       "      <td>During a post-Christmas play date, the gang fi...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.000000e+00</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
-       "      <td>Released</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Toy Story That Time Forgot</td>\n",
-       "      <td>False</td>\n",
-       "      <td>6.8</td>\n",
-       "      <td>249.0</td>\n",
-       "      <td>Toy Story That Time Forgot</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 25 columns</p>\n",
-       "</div>"
-      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "02af4c70084540d18fe4b668a9e59abd",
+       "version_major": 2,
+       "version_minor": 0
+      },
       "text/plain": [
-       "       adult                              belongs_to_collection     budget  \\\n",
-       "0      False  {'id': 10194, 'name': 'Toy Story Collection', ...   30000000   \n",
-       "15348  False  {'id': 10194, 'name': 'Toy Story Collection', ...  200000000   \n",
-       "2997   False  {'id': 10194, 'name': 'Toy Story Collection', ...   90000000   \n",
-       "21928  False                                                NaN          0   \n",
-       "25800  False                                                NaN          0   \n",
-       "\n",
-       "                                                  genres  \\\n",
-       "0      [{'id': 16, 'name': 'Animation'}, {'id': 35, '...   \n",
-       "15348  [{'id': 16, 'name': 'Animation'}, {'id': 10751...   \n",
-       "2997   [{'id': 16, 'name': 'Animation'}, {'id': 35, '...   \n",
-       "21928  [{'id': 16, 'name': 'Animation'}, {'id': 35, '...   \n",
-       "25800  [{'id': 16, 'name': 'Animation'}, {'id': 10751...   \n",
-       "\n",
-       "                                     homepage      id    imdb_id  \\\n",
-       "0        http://toystory.disney.com/toy-story     862  tt0114709   \n",
-       "15348          http://disney.go.com/toystory/   10193  tt0435761   \n",
-       "2997   http://toystory.disney.com/toy-story-2     863  tt0120363   \n",
-       "21928                                     NaN  213121  tt2446040   \n",
-       "25800                                     NaN  256835  tt3473654   \n",
-       "\n",
-       "      original_language              original_title  \\\n",
-       "0                    en                   Toy Story   \n",
-       "15348                en                 Toy Story 3   \n",
-       "2997                 en                 Toy Story 2   \n",
-       "21928                en        Toy Story of Terror!   \n",
-       "25800                en  Toy Story That Time Forgot   \n",
-       "\n",
-       "                                                overview  ...       revenue  \\\n",
-       "0      Led by Woody, Andy's toys live happily in his ...  ...  3.735540e+08   \n",
-       "15348  Woody, Buzz, and the rest of Andy's toys haven...  ...  1.066970e+09   \n",
-       "2997   Andy heads off to Cowboy Camp, leaving his toy...  ...  4.973669e+08   \n",
-       "21928  What starts out as a fun road trip for the Toy...  ...  0.000000e+00   \n",
-       "25800  During a post-Christmas play date, the gang fi...  ...  0.000000e+00   \n",
-       "\n",
-       "      runtime                                   spoken_languages    status  \\\n",
-       "0        81.0           [{'iso_639_1': 'en', 'name': 'English'}]  Released   \n",
-       "15348   103.0  [{'iso_639_1': 'en', 'name': 'English'}, {'iso...  Released   \n",
-       "2997     92.0           [{'iso_639_1': 'en', 'name': 'English'}]  Released   \n",
-       "21928    22.0           [{'iso_639_1': 'en', 'name': 'English'}]  Released   \n",
-       "25800    22.0           [{'iso_639_1': 'en', 'name': 'English'}]  Released   \n",
-       "\n",
-       "                         tagline                       title  video  \\\n",
-       "0                            NaN                   Toy Story  False   \n",
-       "15348   No toy gets left behind.                 Toy Story 3  False   \n",
-       "2997          The toys are back!                 Toy Story 2  False   \n",
-       "21928  One toy gets left behind!        Toy Story of Terror!  False   \n",
-       "25800                        NaN  Toy Story That Time Forgot  False   \n",
-       "\n",
-       "      vote_average vote_count                 clean_title  \n",
-       "0              7.7     5415.0                   Toy Story  \n",
-       "15348          7.6     4710.0                 Toy Story 3  \n",
-       "2997           7.3     3914.0                 Toy Story 2  \n",
-       "21928          7.3      246.0        Toy Story of Terror   \n",
-       "25800          6.8      249.0  Toy Story That Time Forgot  \n",
-       "\n",
-       "[5 rows x 25 columns]"
+       "Text(value='Toy Story', description='Movie Title:')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Widgets can be imbeded into notebooks to perform actions like search\n",
+    "import ipywidgets as widgets\n",
+    "#Display is a function you can use to display outputs from jupyter cells\n",
+    "from IPython.display import display\n",
+    "\n",
+    "movie_input = widgets.Text(\n",
+    "    value = \"Toy Story\",\n",
+    "    description = \"Movie Title:\",\n",
+    "    disabled = False\n",
+    ")\n",
+    "\n",
+    "movie_input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "98ca98d0d74a40389a52afd7f0a34f2b",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IntSlider(value=0)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "widgets.IntSlider()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "924310756ff14c918f78b5caa612e53a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "IntSlider(value=0)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "from IPython.display import display\n",
+    "w = widgets.IntSlider()\n",
+    "display(w)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'results' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m results\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'results' is not defined"
+     ]
     }
    ],
    "source": [
@@ -625,19 +489,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([0.        , 0.        , 0.67863667, ..., 0.        , 0.        ,\n",
-       "       0.        ])"
-      ]
-     },
-     "execution_count": 25,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "similarity"
    ]
@@ -646,19 +498,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<1x84242 sparse matrix of type '<class 'numpy.float64'>'\n",
-       "\twith 3 stored elements in Compressed Sparse Row format>"
-      ]
-     },
-     "execution_count": 23,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "query_vec"
    ]
