Error: Text widgets not working

--- a/jupyter_notebooks/03_Search.ipynb
+++ b/jupyter_notebooks/03_Search.ipynb
@@ -70,7 +70,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_3428/1798478721.py:2: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_4342/1798478721.py:2: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = (pd.read_csv(\"/workspace/Movie-Recommendation/outputs/datasets/cleaned/MovieList.csv\")\n"
      ]
     },
@@ -379,13 +379,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "02af4c70084540d18fe4b668a9e59abd",
+       "model_id": "9b79e4a5ac414a5bb07f1568610878fd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -393,7 +393,7 @@
        "Text(value='Toy Story', description='Movie Title:')"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -410,7 +410,40 @@
     "    disabled = False\n",
     ")\n",
     "\n",
-    "movie_input"
+    "movie_input\n",
+    "\n",
+    "# jupyter nbextension enable --py widgetsnbextension --sys-prefix"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "853e7affdaeb4b00b6a56ee539a987a7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Select(description='OS:', index=2, options=('Linux', 'Windows', 'macOS'), value='macOS')"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "widgets.Select(\n",
+    "    options=['Linux', 'Windows', 'macOS'],\n",
+    "    value='macOS',\n",
+    "    # rows=10,\n",
+    "    description='OS:',\n",
+    "    disabled=False\n",
+    ")"
    ]
   },
   {
@@ -421,7 +454,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "98ca98d0d74a40389a52afd7f0a34f2b",
+       "model_id": "e3f89b8d70cb499a90feaa9765e5d7ef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -440,18 +473,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "924310756ff14c918f78b5caa612e53a",
+       "model_id": "bcad79097c40411c8b9a08e0b26f21d4",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "IntSlider(value=0)"
+       "FloatText(value=7.5, description='Any:')"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "widgets.FloatText(\n",
+    "    value=7.5,\n",
+    "    description='Any:',\n",
+    "    disabled=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "adac1b144a4547058854b0112cdeec25",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Textarea(value='Hello World', description='String:', placeholder='Type something')"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "widgets.Textarea(\n",
+    "    value='Hello World',\n",
+    "    placeholder='Type something',\n",
+    "    description='String:',\n",
+    "    disabled=False\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "60627b2633e44089b79b1cd507768516",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Text(value='Hello World', description='String:', placeholder='Type something')"
       ]
      },
      "metadata": {},
@@ -459,30 +551,13 @@
     }
    ],
    "source": [
-    "from IPython.display import display\n",
-    "w = widgets.IntSlider()\n",
+    "w = widgets.Text(\n",
+    "    value='Hello World',\n",
+    "    placeholder='Type something',\n",
+    "    description='String:',\n",
+    "    disabled=False\n",
+    ")\n",
     "display(w)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'results' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[10], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m results\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'results' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "results"
    ]
   },
   {
