--- a/jupyter_notebooks/03_Search.ipynb
+++ b/jupyter_notebooks/03_Search.ipynb
@@ -2,16 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/workspace/Movie-Recommendation/jupyter_notebooks'"
+       "'/workspace'"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -42,16 +42,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'/workspace/Movie-Recommendation'"
+       "'/'"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -63,14 +63,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/tmp/ipykernel_4342/1798478721.py:2: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
+      "/tmp/ipykernel_2220/1798478721.py:2: DtypeWarning: Columns (10) have mixed types. Specify dtype option on import or set low_memory=False.\n",
       "  df = (pd.read_csv(\"/workspace/Movie-Recommendation/outputs/datasets/cleaned/MovieList.csv\")\n"
      ]
     },
@@ -311,7 +311,7 @@
        "[5 rows x 25 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -379,13 +379,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9b79e4a5ac414a5bb07f1568610878fd",
+       "model_id": "37775e4635fd4a529ce2ba89ca3f3a27",
        "version_major": 2,
        "version_minor": 0
       },
@@ -393,7 +393,7 @@
        "Text(value='Toy Story', description='Movie Title:')"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -417,13 +417,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "853e7affdaeb4b00b6a56ee539a987a7",
+       "model_id": "3fbd4048aa114744ba6b2af015a3aa7a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -431,7 +431,7 @@
        "Select(description='OS:', index=2, options=('Linux', 'Windows', 'macOS'), value='macOS')"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -448,13 +448,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e3f89b8d70cb499a90feaa9765e5d7ef",
+       "model_id": "a370afe317d148cabfdf3045c9fab206",
        "version_major": 2,
        "version_minor": 0
       },
@@ -462,7 +462,7 @@
        "IntSlider(value=0)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -473,13 +473,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bcad79097c40411c8b9a08e0b26f21d4",
+       "model_id": "35a93180f5d34405b0dc830902eba207",
        "version_major": 2,
        "version_minor": 0
       },
@@ -487,7 +487,7 @@
        "FloatText(value=7.5, description='Any:')"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -502,13 +502,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "adac1b144a4547058854b0112cdeec25",
+       "model_id": "e5259a7e573c48dc8a87cebdea37a097",
        "version_major": 2,
        "version_minor": 0
       },
@@ -516,7 +516,7 @@
        "Textarea(value='Hello World', description='String:', placeholder='Type something')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -532,13 +532,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "60627b2633e44089b79b1cd507768516",
+       "model_id": "6dce8c4b71754a45a21aa6f33d278e83",
        "version_major": 2,
        "version_minor": 0
       },
@@ -562,9 +562,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'similarity' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[41], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m similarity\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'similarity' is not defined"
+     ]
+    }
+   ],
    "source": [
     "similarity"
    ]
